; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_init_streams.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_init_streams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_mux = type { i32, i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ffmpeg_mux*)* @init_streams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_streams(%struct.ffmpeg_mux* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ffmpeg_mux*, align 8
  %4 = alloca i32, align 4
  store %struct.ffmpeg_mux* %0, %struct.ffmpeg_mux** %3, align 8
  %5 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %6 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %5, i32 0, i32 2
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %12 = call i32 @create_video_stream(%struct.ffmpeg_mux* %11)
  br label %13

13:                                               ; preds = %10, %1
  %14 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %15 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %45

19:                                               ; preds = %13
  %20 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %21 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %20, i32 0, i32 2
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = sext i32 %23 to i64
  %25 = mul i64 %24, 8
  %26 = trunc i64 %25 to i32
  %27 = call i32 @calloc(i32 1, i32 %26)
  %28 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %29 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 8
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %41, %19
  %31 = load i32, i32* %4, align 4
  %32 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %33 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %32, i32 0, i32 2
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = icmp slt i32 %31, %35
  br i1 %36, label %37, label %44

37:                                               ; preds = %30
  %38 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %39 = load i32, i32* %4, align 4
  %40 = call i32 @create_audio_stream(%struct.ffmpeg_mux* %38, i32 %39)
  br label %41

41:                                               ; preds = %37
  %42 = load i32, i32* %4, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %4, align 4
  br label %30

44:                                               ; preds = %30
  br label %45

45:                                               ; preds = %44, %13
  %46 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %47 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %56, label %50

50:                                               ; preds = %45
  %51 = load %struct.ffmpeg_mux*, %struct.ffmpeg_mux** %3, align 8
  %52 = getelementptr inbounds %struct.ffmpeg_mux, %struct.ffmpeg_mux* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %50
  store i32 0, i32* %2, align 4
  br label %57

56:                                               ; preds = %50, %45
  store i32 1, i32* %2, align 4
  br label %57

57:                                               ; preds = %56, %55
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @create_video_stream(%struct.ffmpeg_mux*) #1

declare dso_local i32 @calloc(i32, i32) #1

declare dso_local i32 @create_audio_stream(%struct.ffmpeg_mux*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
